--- a/paper/sections/methodology.tex
+++ b/paper/sections/methodology.tex
@@ -46,9 +46,9 @@ Our analysis ultimately revealed a set of 75 interconnected concepts that define
 
 \begin{itemize}
 
-\item \emph{Technical properties (Figure~\ref{fig:technical-properties}).} Technical properties are the components that make up blockchain technology. Examples include decentralized governance, a consensus protocol, and an append-only transaction ledger.
+\item \emph{Technical properties.} Technical properties are the components that make up blockchain technology. Examples include decentralized governance, a consensus protocol, and an append-only transaction ledger.
 	
-\item \emph{Capabilities (Figure~\ref{fig:Capabilities}).} Capabilities are the high-level features provided by the technical properties. Examples include automatic executions of code (\ie smart contracts), internal auditability, and access control.
+\item \emph{Capabilities.} Capabilities are the high-level features provided by the technical properties. Examples include automatic executions of code (\ie smart contracts), internal auditability, and access control.
 	
 \item \emph{Technical primitives.} Primitives are the building blocks used to construct the technical properties and capabilities of blockchain technology. Examples include timestamps, hashchains, and peer-to-to-peer communication.
 	
